# panda_ros

./: .gitignore  .gitmodules  Dockerfile  README.md  compile  pub_velocity.py  setup.md
other/simulation_scenes/: hybridPanda.ttt  panda_base_gripper.ttt  updatedPanda.ttt
src/PandaController/: CMakeLists.txt  Controller.py
src/PandaController/include/: DHA.h  KinematicConstants.h  Kinematics.h  PandaController.h  Trajectory.h
src/PandaController/src/: Falcon.cpp  ForceDimension.cpp  ForceDimension_clutch.cpp  ForceTorqueListener.cpp  Gripper.cpp  Kinematics.cpp  PandaController.cpp  PandaControllerAccessors.cpp  Trajectory.cpp  panda_controller_ext.cpp  test_kinematics.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/nodes/: mover
src/dmp_deformations/: CMakeLists.txt  README.md  package.xml
src/dmp_deformations/include/: PandaController.h
src/dmp_deformations/launch/: DMP_panda.launch  nasauli.launch
src/dmp_deformations/nodes/: DMP.py  DMP_learner.py  DMP_rviz.py  GMM.py  LFD_Hybrid.py  PyBSpline.py  deformation_scaling_test.py  deformation_static_scaling.py  dtw_testing.py  generate_path_helper.py  solidworks_to_bsplinesurface.py
src/dmp_deformations/nodes/LFD_helpers/: bagfile_reader.py  preProcessTongs.py  rigid_registration_panda.py  ros_data_type_helpers.py
src/dmp_deformations/nodes/LFD_helpers/algorithms/: discrete_gaussian_filter.py  parallelize.py  print_progress.py  quaternion.py  random_restart.py  rigid_registration.py  transform.py  two_stage_fit.py
src/dmp_deformations/rviz/: view_dmp.rviz
src/dmp_deformations/sim/: pandaCompositeMockup.ttt  pandaCompositeMockup2.ttt  pandaCompositeRolling.ttt  pandaGripper.ttt  pandaPen.ttt  panda_base_gripper.ttt
src/dmp_deformations/src/: BSplineSurface.cpp  DeformationController.cpp  FalconDeformationController.cpp  Falcon_DMP_VREP_ros.cpp  ForceDimensionDeformationController.cpp  ForceDimension_Bilateral.cpp  ForceDimension_DMP_VREP_ros.cpp  ForceDimension_DMP_ros.cpp  ForceDimension_Deformation_Emmanuel.cpp  panda_ros.cpp
src/dmp_deformations/src/backup/: Falcon_DMP_ros.cpp  ForceDimension_DMP_VREP_ros.cpp  ForceDimension_only_testing.cpp  main.cpp
src/falcon_ros/: CMakeLists.txt
src/falcon_ros/src/: rosFalcon.cpp
src/inputs_ros/: CMakeLists.txt  package.xml
src/inputs_ros/include/: drdc.h
src/inputs_ros/launch/: falcon.launch  forcedimension.launch  space_mouse.launch
src/inputs_ros/nodes/: space_mouse
src/inputs_ros/src/: falcon_ros.cpp  forcedimension_ros.cpp
src/mimicry_control/: CMakeLists.txt  package.xml
src/mimicry_control/launch/: mimicry_mico.launch  mimicry_panda.launch  mimicry_ur5.launch  mimicry_ur5_demo.launch
src/panda_ros/: CMakeLists.txt  package.xml
src/panda_ros/launch/: falcon.launch  space_mouse.launch
src/panda_ros/msg/: VelocityBoundPath.msg
src/panda_ros/src/: main.cpp  panda_ros.cpp
src/panda_ros/test/: velocity_control_test
src/panda_ros_msgs/: CMakeLists.txt
src/relaxed_ik/src/: .start_here.py.swp  rviz_viewer.py  start_here.py
src/relaxed_ik/src/RelaxedIK/Config/collision_files/: panda_collision.yaml  ur5_collision.yaml
src/relaxed_ik/src/RelaxedIK/Config/collision_nn/: panda_arm_nn  panda_arm_nn_2  panda_arm_nn_3  panda_arm_nn_params  panda_arm_nn_params_2  panda_arm_nn_params_3  ur5_nn  ur5_nn_2  ur5_nn_3  ur5_nn_params  ur5_nn_params_2  ur5_nn_params_3
src/relaxed_ik/src/RelaxedIK/Config/info_files/: panda_info.yaml  ur5_info.yaml
src/relaxed_ik/src/RelaxedIK/Spacetime_Julia/: robot.jl
