<?xml version="1.0"?>
<package format="2">
    <name>controller</name>
    <version>1.0.0</version>
    <description>
        High level controller for panda.
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H., Kevin W., Tim L., Luis M., Emmanuel S.</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>relaxed_ik</depend>

</package>
