<?xml version="1.0"?>
<package format="2">
    <name>dmp_deformations</name>
    <version>1.0.0</version>
    <description>
        DMP learn and replay and deform
    </description>
    <maintainer email="wisconsinhci@gmail.com">Mike H., Kevin W., Tim L., Luis M., Emmanuel S.</maintainer>
    <license>WTFPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
